<resources>
    <string name="app_name">SuperApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="imagenHeroe">Imagen del Heroe</string>
    <string name="apaticion">Fecha de Creacion: </string>
    <string name="creador">Creadores: </string>
    <string name="equipo">Equipo: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="compañeros">Compañeros: </string>
</resources>
