<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    xmlns:android="http://schemas.android.com/apk/res/android" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:context=".fragments.HeroesDetailList">

        <ImageView
            android:id="@+id/imageID"
            android:layout_width="175dp"
            android:layout_height="225dp"
            android:contentDescription="@string/imagenHeroe"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="225dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageID"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/apaticion"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/aparicionID"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/creador"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/creadorID"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/equipo"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/equipoID"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_red_dark"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageID" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/poderesID"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/poderes2ID"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/poderes3ID"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/poderes4ID"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/descripcion"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <TextView
            android:id="@+id/descripcionID"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="32dp"
            android:text="@string/compañeros"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcionID" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/compañeroID"
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/compañeros" />

                <ImageView
                    android:id="@+id/compañero2ID"
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/compañeros" />

                <ImageView
                    android:id="@+id/compañero3ID"
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/compañeros" />
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>